(PC-33236)[PRO] fix: alignement issues in indiv. offer creation price screen + improve price input a11y

--- a/pro/src/ui-kit/Button/Button.module.scss
+++ b/pro/src/ui-kit/Button/Button.module.scss
@@ -32,7 +32,7 @@
     vertical-align: text-bottom;
   }
 
-  &.button-center {
+  &-center {
     padding: 0 rem.torem(8px);
   }
 
